
        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

- Avoid setting the `tracestate` header for outgoing HTTP requests to the empty
  string. This can happen for non-trace-root transactions. While the HTTP spec
  allows empty header values, some servers do not. ({issues}2405[#2405])

- Deprecate `transaction.subtype` and `transaction.action`. These fields
  were never used by APM server. This also deprecates the
  `apm.startTransaction(...)` call signatures that take `subtype` and `action`
  arguments. In the next major version these two fields will be removed.
  ({issues}2356[#2356])


[[release-notes-3.24.0]]
==== 3.24.0 2021/11/09

[float]
===== Breaking changes

* Change <<disable-send, `disableSend`>> to no longer skip internal processing
  work. It now *only* disables communication with APM Server. Use
  <<context-propagation-only, `contextPropagationOnly`>> if your use case is
  to limit the APM agent's processing to the minimum to support context
  propagation and log correlation.
+
This is listed under "Breaking changes" as a heads-up. The only possible
negative result of this `disableSend` change is some extra CPU processing time
by the agent. There is no outward functionality change.

[float]
===== Features

* Gather https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md#overwriting-metadata[AWS Lambda-specific metadata]
  on first function invocation and ensure no intake requests to APM Server are
  started before that metadata is available. ({issues}2404[#2404])

* Add <<context-propagation-only, `contextPropagationOnly`>> configuration