@@ -5,6 +5,8 @@ var semver = require('semver')
 var shimmer = require('../shimmer')
 var { getDBDestination } = require('../context')
 
+const isWrappedRedisCbSym = Symbol('ElasticAPMIsWrappedRedisCb')
+
 module.exports = function (redis, agent, { version, enabled }) {
   if (!semver.satisfies(version, '>=2.0.0 <4.0.0')) {
     agent.logger.debug('redis version %s not supported - aborting...', version)
@@ -33,16 +35,29 @@ module.exports = function (redis, agent, { version, enabled }) {
   return redis
 
   function makeWrappedCallback (span, cb) {
-    return agent._instrumentation.bindFunction(function wrappedCallback () {
+    const wrappedCallback = agent._instrumentation.bindFunction(function () {
       if (span) span.end()
       if (cb) {
         return cb.apply(this, arguments)
       }
     })
+    wrappedCallback[isWrappedRedisCbSym] = true
+    return wrappedCallback
   }
 
   function wrapInternalSendCommand (original) {
     return function wrappedInternalSendCommand (commandObj) {
+      if (!commandObj || typeof commandObj.command !== 'string') {
+        // Unexpected usage. Skip instrumenting this call.
+        return original.apply(this, arguments)
+      }
+
+      if (commandObj.callback && commandObj.callback[isWrappedRedisCbSym]) {
+        // Avoid re-wrapping send_command called *again* for commands queued
+        // before the client was "ready".
+        return original.apply(this, arguments)
+      }
+
       var span = enabled && agent.startSpan(null, 'cache', 'redis')
       var id = span && span.transaction.id
       var command = commandObj && commandObj.command
@@ -57,12 +72,8 @@ module.exports = function (redis, agent, { version, enabled }) {
           port = connOpts.port
         }
         span.setDestinationContext(getDBDestination(span, host, port))
-      }
-      if (commandObj) {
+        span.name = String(command).toUpperCase()
         commandObj.callback = makeWrappedCallback(span, commandObj.callback)
-        if (span) {
-          span.name = String(command).toUpperCase()
-        }
       }
 
       return original.apply(this, arguments)
@@ -70,12 +81,26 @@ module.exports = function (redis, agent, { version, enabled }) {
   }
 
   function wrapSendCommand (original) {
-    return function wrappedSendCommand (command) {
+    return function wrappedSendCommand (command, args, cb) {
+      if (typeof command !== 'string') {
+        // Unexpected usage. Skip instrumenting this call.
+        return original.apply(this, arguments)
+      }
+
+      let origCb = cb
+      if (!origCb && Array.isArray(args) && typeof args[args.length - 1] === 'function') {
+        origCb = args[args.length - 1]
+      }
+      if (origCb && origCb[isWrappedRedisCbSym]) {
+        // Avoid re-wrapping send_command called *again* for commands queued
+        // before the client was "ready".
+        return original.apply(this, arguments)
+      }
+
       var span = enabled && agent.startSpan(null, 'cache', 'redis')
       var id = span && span.transaction.id
-      var args = Array.prototype.slice.call(arguments)
 
-      agent.logger.debug('intercepted call to RedisClient.prototype.internal_send_command %o', { id: id, command: command })
+      agent.logger.debug('intercepted call to RedisClient.prototype.send_command %o', { id: id, command: command })
 
       if (span) {
         let host, port
@@ -85,28 +110,19 @@ module.exports = function (redis, agent, { version, enabled }) {
           port = connOpts.port
         }
         span.setDestinationContext(getDBDestination(span, host, port))
-      }
-      if (args.length > 0) {
-        var index = args.length - 1
-        var cb = args[index]
-        if (typeof cb === 'function') {
-          args[index] = makeWrappedCallback(span, cb)
-        } else if (Array.isArray(cb) && typeof cb[cb.length - 1] === 'function') {
-          cb[cb.length - 1] = makeWrappedCallback(span, cb[cb.length - 1])
+        span.name = String(command).toUpperCase()
+
+        const wrappedCb = makeWrappedCallback(span, origCb)
+        if (cb) {
+          cb = wrappedCb
+        } else if (origCb) {
+          args[args.length - 1] = wrappedCb
         } else {
-          var obCb = makeWrappedCallback(span)
-          if (typeof args[index] === 'undefined') {
-            args[index] = obCb
-          } else {
-            args.push(obCb)
-          }
-        }
-        if (span) {
-          span.name = String(command).toUpperCase()
+          cb = wrappedCb
         }
       }
 
-      return original.apply(this, args)
+      return original.call(this, command, args, cb)
     }
   }
 }
