@@ -172,7 +172,7 @@
     "once": "^1.4.0",
     "pg": "^8.7.1",
     "pug": "^2.0.4",
-    "redis": "^3.0.2",
+    "redis": "^3.1.2",
     "request": "^2.88.2",
     "restify": "^8.5.1",
     "rimraf": "^3.0.2",
